# BookerAutoVideo

./: .gitignore  CHANGELOG.md  README.en.md  README.md  install.sh  publish.ps1  pyproject.toml  requirements.txt  setup.py
BookerAutoVideo/: __init__.py  __main__.py  audio2text.py  audio2txt.py  autovideo.py  autovideo_config.py  clip.py  imgsim.py  keyframe.py  sencevoice.py  split.py  util.py  video2txt.py
BookerAutoVideo-2023.5.30.0/: PKG-INFO  README.md
BookerAutoVideo-2023.5.30.0/BookerAutoVideo/: __main__.py  _autovideo.py  autovideo.py  autovideo_config.py  keyframe.py
examples/autovideo_example/: playbook.yml  playbook_purecolor.yml  playbook_purevideo.yml  playbook_video_repeat.yml
